--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <section id="description">
             <h2>About Bussin</h2>
             <p>Welcome to the Bussin programming language page. Bussin is a simple yet powerful programming language designed for ease of use and efficiency.</p>
-            <p>Click the buttons below to learn more about Bussin:</p>
+            <p>Click the button below to access the Bussin terminal:</p>
             <div class="buttons">
                 <button id="about-button">About</button>
                 <button id="examples-button">Examples</button>
-                <button id="terminal-button">Access Bussin Terminal</button>
+                <button id="terminal-button" onclick="redirectToTerminal()">Access Bussin Terminal</button>
             </div>
         </section>
     </main>
@@ -27,5 +27,10 @@
     </footer>
 
     <script src="script.js"></script>
+    <script>
+        function redirectToTerminal() {
+            window.location.href = "terminal.html";
+        }
+    </script>
 </body>
 </html>
